# HinglishKosh

./: .bumpversion.cfg  .gitignore  PLAN.md  PULL_REQUEST.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: common_words.json
docs/: architecture.md  optimizations.md
frontend/: .env.example  dev_server.py  wrangler.toml
frontend-svelte/: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  schema-only.sql  svelte.config.js  vite.config.ts  wrangler.toml
frontend-svelte/scripts/: setup-local-db.sh
frontend-svelte/src/: app.css  app.html
frontend-svelte/static/: robots.txt
frontend/functions/: _utils.js  search.js
frontend/public/: 404.html  _routes.json  about.html  app.js  index.html  style.css
frontend/scripts/: dump_for_d1.py
frontend/tests/: conftest.py  test_api.py  test_enrichment.py
scripts/: download_data.sh  generate_release_notes.py  release.sh  upload_hf.sh
src/: __init__.py  cli.py
src/api/: main.py
src/ingestion/: __init__.py  supplemental_loader.py  wiktionary_loader.py  wordnet_loader.py
src/integration/: __init__.py  (+2 more)
tests/: _def_sample.py  test_1000_words.py  test_500_more_words.py  test_api.py  test_audit.py  test_basic.py  test_confidence.py  test_dedup_merge.py  test_def_transliterations.py  test_lookup.py  test_manual_hinglish_benchmark.py  test_merge.py  test_safety.py  test_supplemental_loader.py  test_transliterate.py  test_wiktionary_loader.py  test_word_transliterations.py  test_wordnet_loader.py
(+48 files in other folders)
