[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "hinglish-dictionary"
version = "1.4.1"
description = "A comprehensive Hinglish-English dictionary dataset for keyboards and apps"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Hinglish Dict Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "tqdm>=4.64",
    "rapidfuzz>=3.0",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "transformers>=4.30",
    "torch>=2.0",
    "huggingface-hub>=0.15",
    "soundex>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "bump2version>=1.0",
]

[project.scripts]
hinglish-dict = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
